--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,15 @@ before_install:
 
 script:
   - docker run -e CI=true dockerajat13/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "frontend"
+  env: "frontend-env"
+  bucket_name: "elasticbeanstalk-us-east-1-536697236347"
+  bucket_path: "frontend"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: "$AWS_SECRET_KEY"
